--- a/style.css
+++ b/style.css
@@ -12,6 +12,18 @@ body {
   line-height: 1.5;
 }
 
+body h3 {
+  font-size: 1.8125rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+body h2 {
+  font-size: 2.3125rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
 a {
   color: #262626;
   text-decoration: none;
@@ -23,7 +35,7 @@ ul {
 
 .container {
   width: 90%;
-  max-width: 1100px;
+  max-width: 1600px;
   margin: auto;
 }
 
@@ -88,7 +100,7 @@ ul {
   text-align: center;
   justify-content: flex-end;
   padding-bottom: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 48px;
 }
 
 .showcase h2,
@@ -98,4 +110,65 @@ ul {
 
 .showcase .btn {
   margin-top: 18px;
+}
+
+/* Home cards */
+.home-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin: 96px 0;
+}
+
+.home-cards img {
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+.home-cards h3 {
+  margin-bottom: 16px;
+}
+
+.home-cards a {
+  display: inline-block;
+  padding-top: 16px;
+  color: #0067b8;
+  font-weight: 600;
+}
+
+.home-cards a i {
+  margin-left: 2px;
+  transition: margin-left 0.5s;
+}
+
+.home-cards a:hover i {
+  margin-left: 7px;
+  transition: margin-left 0.3s;
+}
+
+/* Xbox */
+.xbox {
+  height: 600px;
+  width: 100%;
+  background: url('img/Xbox\ Series.avif') no-repeat;
+  background-size: cover;
+  position: relative;
+  background-position: center center;
+  display: flex;
+  margin: 48px 0;
+}
+
+.xbox .content {
+  max-width: 600px;
+  padding: 48px;
+  margin: 0 80px;
+  align-self: center;
+}
+
+.xbox h2 {
+  margin-bottom: 16px;
+}
+
+.xbox p {
+  margin-bottom: 24px;
 }
