--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ ul {
   cursor: pointer;
   display: inline-block;
   border: 0;
+  border-radius: 0.125rem;
   font-weight: bold;
   padding: 10px 20px;
   background: #0067b8;
@@ -116,8 +117,8 @@ ul {
 .home-cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  margin: 96px 0;
+  gap: 24px;
+  margin: 48px 0 96px 0;
 }
 
 .home-cards img {
@@ -152,7 +153,6 @@ ul {
   width: 100%;
   background: url('img/Xbox\ Series.avif') no-repeat;
   background-size: cover;
-  position: relative;
   background-position: center center;
   display: flex;
   margin: 48px 0;
@@ -165,10 +165,95 @@ ul {
   align-self: center;
 }
 
-.xbox h2 {
-  margin-bottom: 16px;
+.xbox h2,
+.second-slider h2 {
+  margin-bottom: 20px;
 }
 
-.xbox p {
+.xbox p,
+.second-slider p {
   margin-bottom: 24px;
+}
+
+/* Home cards 2 */
+.home-cards-margin {
+  margin-top: 20px;
+}
+
+.home-cards-2 {
+  margin: 96px 0;
+}
+
+/* Second slider */
+.second-slider {
+  display: flex;
+  width: 100%;
+  height: 600px;
+  background: url('img/Highlight-Microsoft-AI-Anthology-VP4-1260x600.avif') no-repeat center center/cover;
+  justify-content: end;
+}
+
+.second-slider .content {
+  width: 600px;
+  height: fit-content;
+  background: #fff;
+  padding: 48px;
+  box-shadow: 0 0.1875rem 0.4375rem 0 rgba(0, 0, 0, 0.13), 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.11);
+  align-self: center;
+  margin-right: 79.5px;
+}
+
+/* Follow */
+.follow {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 48px 0;
+  padding: 0 12px;
+}
+
+.follow * {
+  margin-right: 12px;
+}
+
+.follow p {
+  margin-right: 16px;
+}
+
+/* Links */
+.links {
+  background: #f2f2f2;
+  color: #616161;
+  font-size: 11px;
+  font-weight: 400;
+  padding-top: 36px;
+}
+
+.links a {
+  color: #616161;
+}
+
+.links-inner {
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 12px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.links li {
+  line-height: 16px;
+  padding: 8px 0;
+}
+
+.links li:nth-of-type(1) {
+  padding: 0 0 4px 0;
+}
+
+.links h4 {
+  font-size: 15px;
+  font-weight: 600;
 }
