--- a/style.css
+++ b/style.css
@@ -234,9 +234,10 @@ ul {
 }
 
 .links-inner {
+  width: 90%;
   max-width: 1600px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 20px 0;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 12px;
@@ -256,4 +257,65 @@ ul {
 .links h4 {
   font-size: 15px;
   font-weight: 600;
+}
+
+/* Footer */
+.footer {
+  background: #f2f2f2;
+  color: #616161;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.footer a {
+  color: #616161;
+}
+
+.footer-inner {
+  width: 90%;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 30px 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer div {
+  margin-bottom: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.footer div i {
+  margin-right: 10px;
+}
+
+.footer ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer li {
+  margin-right: 24px;
+  margin-bottom: 4px;
+}
+
+@media (max-width: 1084px) {
+  .home-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .home-cards h3 {
+    font-size: 1.3125rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .home-cards p {
+    font-size: 1rem;
+  }
+
+  .home-cards div {
+    margin-bottom: 2rem;
+  }
 }
