--- a/style.css
+++ b/style.css
@@ -41,12 +41,16 @@ ul {
 
 /* Nav */
 .main-nav {
+  width: 90%;
+  max-width: 1600px;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 54px;
   padding: 20px 0;
   font-size: 13px;
+  margin-bottom: 2px;
 }
 
 .main-nav .logo {
@@ -78,11 +82,11 @@ ul {
   display: inline-block;
   border: 0;
   border-radius: 0.125rem;
-  font-weight: bold;
-  padding: 10px 20px;
+  font-weight: 600;
+  padding: 9px 12px;
   background: #0067b8;
   color: #fff;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .btn:hover {
@@ -91,17 +95,40 @@ ul {
 }
 
 /* Showcase */
+/* .showcase {
+  width: 100%;
+  height: 592px;
+  background: url('./img/Highlight-Surf-Bundles-Surface-Laptop-5-Dock-2_VP5-1920x600.avif') no-repeat;
+  background-position: top left;
+  background-size: 100% auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.showcase .header-text {
+  max-width: 600px;
+  margin-right: 200px;
+  padding: 48px;
+} */
+
 .showcase {
   width: 100%;
-  height: 400px;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  text-align: center;
-  justify-content: flex-end;
-  padding-bottom: 50px;
-  margin-bottom: 48px;
+}
+
+.showcase img {
+  width: 100%;
+  height: auto;
+}
+
+.showcase .header-text {
+  padding: 48px;
+  width: 100%;
+  height: auto;
+  max-width: 660px;
+  margin-left: -800px;
 }
 
 .showcase h2,
@@ -118,7 +145,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 24px;
-  margin: 48px 0 96px 0;
+  margin: 48px 0 64px 0;
 }
 
 .home-cards img {
@@ -194,7 +221,7 @@ ul {
 }
 
 .second-slider .content {
-  width: 600px;
+  max-width: 600px;
   height: fit-content;
   background: #fff;
   padding: 48px;
@@ -231,6 +258,12 @@ ul {
 
 .links a {
   color: #616161;
+}
+
+.links a:hover,
+.footer a:hover {
+  color: rgba(0, 0, 0, 0.9);
+  text-decoration: underline;
 }
 
 .links-inner {
@@ -301,7 +334,25 @@ ul {
   margin-bottom: 4px;
 }
 
+@media (max-width: 1500px) {
+  .showcase .header-text {
+    padding: 48px;
+    width: 100%;
+    height: auto;
+    max-width: 500px;
+    margin-left: -580px;
+  }
+
+  .showcase h2 {
+    font-size: 1.8125rem;
+  }
+}
+
 @media (max-width: 1084px) {
+  .container {
+    width: 97.5%;
+  }
+
   .home-cards {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -317,5 +368,68 @@ ul {
 
   .home-cards div {
     margin-bottom: 2rem;
+  }
+
+  .xbox {
+    background: url('img/Highlight-Xbox-Series-S-1TB-Black-002_VP3-1083x600.jpg') no-repeat center center/cover;
+  }
+
+  .xbox h2,
+  .second-slider h2 {
+    font-size: 1.5rem;
+    margin-bottom: 12px;
+  }
+
+  .xbox,
+  .second-slider {
+    height: 580px;
+    flex-direction: column;
+    justify-content: end;
+    margin-bottom: 17rem;
+  }
+
+  .xbox .content,
+  .second-slider .content {
+    background: #fff;
+    max-width: 100%;
+    margin: 0 12px;
+    margin-bottom: -11.7rem;
+    align-self: normal;
+    box-shadow: 0 0.1875rem 0.4375rem 0 rgba(0, 0, 0, 0.13), 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.11);
+  }
+
+  .second-slider {
+    background: url('img/Highlight-Microsoft-AI-Anthology_VP3-1083x600.avif') no-repeat center center/cover;
+  }
+
+  .second-slider {
+    margin-bottom: 15rem;
+  }
+
+  #hc2header {
+    font-size: 24px;
+    margin-bottom: -8px;
+  }
+
+  .home-cards-2,
+  .home-cards-margin {
+    margin-bottom: 16px;
+  }
+
+  .links-inner {
+    width: 97.5%;
+    padding: 20px 12px 0;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 36px;
+  }
+
+  .footer-inner {
+    width: 100%;
+    margin: 0;
+    padding: 30px 24px 16px;
+  }
+
+  .footer div {
+    margin: 0;
   }
 }
